# face-morph

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile.cpu  Dockerfile.gpu  HEATMAP_DOCUMENTATION.md  HEATMAP_INTERPRETATION.md  INSTALLATION.md  LICENSE  OPTIMIZATIONS.md  PERFORMANCE.md  README.md  docker-compose.yml  environment.yml  install.sh  morph  pyproject.toml  run.py
.github/workflows/: docker-publish.yml
docs/: installation.md  usage.md
docs/development/: GPU_VERIFICATION.md
lib/: __init__.py  converter.py  heatmap.py  mesh_io.py  renderer.py  renderer_pyrender.py  texture_io.py  utils.py
profiling_results/: PERFORMANCE_ANALYSIS.md  default_cpu_notextured_profile.json  default_cpu_textured_profile.json  full_cpu_textured_profile.json  profiling_report.json
scripts/: activate_env.bat  activate_env.ps1  activate_env.sh  profile_pipeline.py  profile_simple.py
src/face_morph/: __init__.py
src/face_morph/cli/: __init__.py  main.py
src/face_morph/core/: __init__.py  exceptions.py  morpher.py  validator.py
src/face_morph/pipeline/: __init__.py  config.py  orchestrator.py  stages.py  workers.py
src/face_morph/rendering/: __init__.py  base.py  factory.py  pyrender.py  pytorch3d.py
src/face_morph/utils/: __init__.py  context.py  device.py  gpu_optimizer.py  heatmap_renderer.py  io_optimizer.py  logging.py  parallel.py  platform_utils.py
src/face_morph/visualization/: __init__.py  export.py  heatmap.py  video.py
tests/: __init__.py
